fixing mark/warning style overlap

--- a/src/components/editor/editor.css
+++ b/src/components/editor/editor.css
@@ -52,6 +52,15 @@
     cursor: default;
 }
 
+.wm-warning.wm-marked::before {
+    display: none;
+    border-bottom: none;
+    height: 8px;
+    width: 8px;
+    margin-top: -11px;
+    margin-left: 8px;
+}
+
 
 #btnPlay, #btnStop {
     cursor: pointer;
